// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio disabled: disabled 1`] = `
.emotion-7 {
  margin-bottom: 10px;
}

@media only screen and (min-width:641px) {
  .emotion-7 {
    margin-bottom: 10px;
  }
}

.emotion-5 {
  display: block;
  position: relative;
  padding: 0 0 0 38px;
  margin-right: 0;
  margin-bottom: 10px;
}

@media only screen and (min-width:641px) {
  .emotion-5 {
    margin-bottom: 10px;
  }
}

.emotion-2 {
  font-family: "nta",Arial,sans-serif;
  font-weight: 400;
  text-transform: none;
  font-size: 16px;
  line-height: 1.25;
  cursor: pointer;
  padding: 8px 10px 9px 12px;
  display: block;
}

.emotion-2:before {
  content: '';
  box-sizing: border-box;
  position: absolute;
  top: 0;
  left: 0;
  width: 33px;
  height: 33px;
  border: 2px solid black;
  border-radius: 50%;
  background: transparent;
}

.emotion-2:after {
  content: '';
  position: absolute;
  top: 8px;
  left: 8px;
  width: 0;
  height: 0;
  border: 8.5px solid;
  border-radius: 50%;
  opacity: 0;
}

.emotion-0 {
  position: absolute;
  cursor: pointer;
  left: 0;
  top: 0;
  width: 38px;
  height: 38px;
  z-index: 1;
  margin: 0;
  zoom: 1;
  opacity: 0;
  cursor: auto;
}

.emotion-0:checked + span::after {
  opacity: 1;
}

.emotion-0:focus + span::before {
  box-shadow: 0 0 0 4px #ffbf47;
}

.emotion-0 + span {
  opacity: .4;
  pointer-events: none;
}

<StyledHoc
  disabled={true}
  inline={false}
>
  <Radio
    className="emotion-7 emotion-4"
    disabled={true}
    inline={false}
  >
    <Label
      className="emotion-7 emotion-4"
      inline={false}
    >
      <label
        className="emotion-4 emotion-5 emotion-6"
      >
        <Input
          disabled={true}
          type="radio"
        >
          <input
            className="emotion-0 emotion-1"
            disabled={true}
            type="radio"
          />
        </Input>
        <LabelText>
          <span
            className="emotion-2 emotion-3"
          >
            Example
          </span>
        </LabelText>
      </label>
    </Label>
  </Radio>
</StyledHoc>
`;

exports[`Radio matches snapshot for inline: inline mount 1`] = `
.emotion-7 {
  margin-bottom: 10px;
}

@media only screen and (min-width:641px) {
  .emotion-7 {
    margin-bottom: 10px;
  }
}

.emotion-0 {
  position: absolute;
  cursor: pointer;
  left: 0;
  top: 0;
  width: 38px;
  height: 38px;
  z-index: 1;
  margin: 0;
  zoom: 1;
  opacity: 0;
  cursor: pointer;
}

.emotion-0:checked + span::after {
  opacity: 1;
}

.emotion-0:focus + span::before {
  box-shadow: 0 0 0 4px #ffbf47;
}

.emotion-0 + span {
  opacity: 1;
  pointer-events: auto;
}

.emotion-2 {
  font-family: "nta",Arial,sans-serif;
  font-weight: 400;
  text-transform: none;
  font-size: 16px;
  line-height: 1.25;
  cursor: pointer;
  padding: 8px 10px 9px 12px;
  display: block;
}

.emotion-2:before {
  content: '';
  box-sizing: border-box;
  position: absolute;
  top: 0;
  left: 0;
  width: 33px;
  height: 33px;
  border: 2px solid black;
  border-radius: 50%;
  background: transparent;
}

.emotion-2:after {
  content: '';
  position: absolute;
  top: 8px;
  left: 8px;
  width: 0;
  height: 0;
  border: 8.5px solid;
  border-radius: 50%;
  opacity: 0;
}

.emotion-5 {
  display: block;
  position: relative;
  padding: 0 0 0 38px;
  float: left;
  clear: none;
  margin-right: 30px;
  margin-bottom: 10px;
}

@media only screen and (min-width:641px) {
  .emotion-5 {
    margin-bottom: 10px;
  }
}

<StyledHoc
  inline={true}
  name="example"
>
  <Radio
    className="emotion-7 emotion-4"
    inline={true}
    name="example"
  >
    <Label
      className="emotion-7 emotion-4"
      inline={true}
    >
      <label
        className="emotion-4 emotion-5 emotion-6"
      >
        <Input
          name="example"
          type="radio"
        >
          <input
            className="emotion-0 emotion-1"
            name="example"
            type="radio"
          />
        </Input>
        <LabelText>
          <span
            className="emotion-2 emotion-3"
          >
            example
          </span>
        </LabelText>
      </label>
    </Label>
  </Radio>
</StyledHoc>
`;

exports[`Radio matches snapshot: standard mount 1`] = `
.emotion-7 {
  margin-bottom: 10px;
}

@media only screen and (min-width:641px) {
  .emotion-7 {
    margin-bottom: 10px;
  }
}

.emotion-5 {
  display: block;
  position: relative;
  padding: 0 0 0 38px;
  margin-right: 0;
  margin-bottom: 10px;
}

@media only screen and (min-width:641px) {
  .emotion-5 {
    margin-bottom: 10px;
  }
}

.emotion-0 {
  position: absolute;
  cursor: pointer;
  left: 0;
  top: 0;
  width: 38px;
  height: 38px;
  z-index: 1;
  margin: 0;
  zoom: 1;
  opacity: 0;
  cursor: pointer;
}

.emotion-0:checked + span::after {
  opacity: 1;
}

.emotion-0:focus + span::before {
  box-shadow: 0 0 0 4px #ffbf47;
}

.emotion-0 + span {
  opacity: 1;
  pointer-events: auto;
}

.emotion-2 {
  font-family: "nta",Arial,sans-serif;
  font-weight: 400;
  text-transform: none;
  font-size: 16px;
  line-height: 1.25;
  cursor: pointer;
  padding: 8px 10px 9px 12px;
  display: block;
}

.emotion-2:before {
  content: '';
  box-sizing: border-box;
  position: absolute;
  top: 0;
  left: 0;
  width: 33px;
  height: 33px;
  border: 2px solid black;
  border-radius: 50%;
  background: transparent;
}

.emotion-2:after {
  content: '';
  position: absolute;
  top: 8px;
  left: 8px;
  width: 0;
  height: 0;
  border: 8.5px solid;
  border-radius: 50%;
  opacity: 0;
}

<StyledHoc
  inline={false}
  name="example"
>
  <Radio
    className="emotion-7 emotion-4"
    inline={false}
    name="example"
  >
    <Label
      className="emotion-7 emotion-4"
      inline={false}
    >
      <label
        className="emotion-4 emotion-5 emotion-6"
      >
        <Input
          name="example"
          type="radio"
        >
          <input
            className="emotion-0 emotion-1"
            name="example"
            type="radio"
          />
        </Input>
        <LabelText>
          <span
            className="emotion-2 emotion-3"
          >
            example
          </span>
        </LabelText>
      </label>
    </Label>
  </Radio>
</StyledHoc>
`;
